<resources>
    <string name="app_name" translatable="false">Talkufy</string>
    <string name="sample_title" translatable="false">ChatKit for Android</string>
    <string name="view" translatable="false">View</string>
    <string name="sample_title_default" translatable="false">Default view</string>
    <string name="sample_subtitle_default" translatable="false">Dialogs and messages with default style</string>
    <string name="sample_title_attrs" translatable="false">Styled view</string>
    <string name="sample_subtitle_attrs" translatable="false">Styled components using embedded attributes</string>
    <string name="sample_title_layout" translatable="false">Custom layout</string>
    <string name="sample_subtitle_layout" translatable="false">Custom layouts to change default views position</string>
    <string name="sample_title_holder" translatable="false">Custom view holder</string>
    <string name="sample_subtitle_holder" translatable="false">Custom view holder to extend default behaviour for a new
        features
    </string>
    <string name="sample_title_custom_content" translatable="false">Custom content type</string>
    <string name="sample_subtitle_custom_content" translatable="false">Custom message content on the example of voice
        message
    </string>
    <string name="hint_enter_a_message" translatable="false">Type a message…</string>
    <string name="on_log_click_message" translatable="false">Your custom long click handler</string>
    <string name="action_delete" translatable="false">Delete</string>
    <string name="action_copy" translatable="false">Copy</string>
    <string name="copied_message" translatable="false">Message copied to clipboard!</string>
    <string name="google_maps_key" translatable="false">AIzaSyBaZjnZm2myrbhG2fTu5y-iy6ymz1CUOrc</string>
    <string name="date_header_today" translatable="false">Today</string>
    <string name="date_header_yesterday" translatable="false">Yesterday</string>
    <string-array name="view_types_dialog">
        <item name="image">Image (default)</item>
        <item name="voice">Voice message (custom)</item>
    </string-array>
    <string name="start_typing_status" translatable="false">Start typing</string>
    <string name="stop_typing_status" translatable="false">Stop typing</string>
    <string name="otp" translatable="false">
        <![CDATA[<font color="#a3a3a3">We will send you an</font> <font color="#000000">One Time Password</font> <font color="#a3a3a3">on this mobile number</font>]]></string>
    <string name="otp1" translatable="false">
        <![CDATA[<font color="#a3a3a3">Enter OTP send to </font> <font color="#000000">+91-9876-564-656</font>]]></string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="title_activity_user_profile" translatable="false">UserProfileActivity</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_settings" translatable="false">Settings</string>
    <string name="pref_header_general" translatable="false">General</string>
    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message
        history
    </string>
    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>
    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="your_username" translatable="false">Your Username</string>
    <string name="your_full_name" translatable="false">Your full name</string>
    <string name="your_current_city" translatable="false">Your Current City</string>
    <string name="your_current_bio" translatable="false">Your Current Bio</string>
    <string name="update_profile" translatable="false">Update Profile</string>
    <string name="incoming_call" translatable="false">Incoming Call</string>
    <string name="reply_image_with_message" translatable="false">Reply Image With Message</string>
    <string name="reject_an_incoming_call" translatable="false">Reject an incoming call</string>
    <string name="pick_an_incoming_call" translatable="false">Pick an incoming call</string>
    <string name="call_type" translatable="false">call type</string>
    <string name="audio_call" translatable="false">Audio Call</string>
    <string name="loading" translatable="false">Loading…</string>
    <string name="outgoing_call" translatable="false">Outgoing Call</string>
    <string name="call_ended" translatable="false">Call Ended</string>
    <string name="media" translatable="false">Media</string>
    <string name="block_this_contact" translatable="false">Block this contact</string>
    <string name="mute_notification" translatable="false">Mute Notification</string>
    <string name="notification" translatable="false">Notification</string>
    <string name="add_channel_or_group_members" translatable="false">Add Channel or Group Members</string>
    <string name="phone_number" translatable="false">Phone Number</string>
</resources>