<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="0dp"
        tools:context=".saytalk.activities.EditProfile">

    <include layout="@layout/layout_profile_image_picker" />


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

            <EditText
                    android:id="@+id/profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:hint="@string/your_username"
                    android:padding="10dp" />

            <EditText
                    android:id="@+id/profile_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:hint="@string/your_full_name"
                    android:padding="10dp" />

            <EditText
                    android:id="@+id/profile_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:hint="@string/your_current_city"
                    android:padding="10dp" />

            <EditText
                    android:id="@+id/profile_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:hint="@string/your_current_bio"
                    android:padding="10dp" />


            <Button
                    android:id="@+id/updateProfileBtn"
                    style="@style/RoundButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/update_profile" />
        </LinearLayout>
    </ScrollView>



</LinearLayout>