<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:background="@drawable/drawable_gradient_animation_list"
        android:orientation="vertical"
        android:padding="0dp"
        tools:context=".saytalk.activities.OutgoingCallActivity">
    <TextView
            android:paddingTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outgoing_call"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"/>

    <TextView
            android:id="@+id/callername"
            android:paddingTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outgoing_call"
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"/>

    <TextView
            android:id="@+id/callernumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outgoing_call"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"/>


    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/caller_imageview"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="20dp"
            app:civ_border_width="2dp"
            app:civ_circle_background_color="@color/white"
            android:scaleType="centerCrop"
            app:civ_border_overlay="true"
            app:civ_border_color="@color/white"
            android:src="@drawable/contact_placeholder"
            android:layout_gravity="center_horizontal"/>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <View android:layout_width="0dp"
              android:layout_height="0dp"
              android:layout_weight="1"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="vertical">

            <ImageView
                    android:id="@+id/call_type_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/vw_ic_audio"
                    android:contentDescription="@string/call_type"
                    app:tint="@color/white" />

            <TextView
                    android:id="@+id/call_type_text"
                    android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                    android:textSize="15sp"
            android:textColor="@color/white"
            android:text="@string/audio_call"/>
        </LinearLayout>


        <View android:layout_width="0dp"
              android:layout_height="0dp"
              android:layout_weight="1"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">



            <View android:layout_width="0dp"
                  android:layout_height="0dp"
                  android:layout_weight="1"/>

            <ImageView
                    android:id="@+id/buttonReject"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/background_white_button"
                    android:src="@drawable/ic_call_end_white_34dp"
                    android:layout_gravity="start"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="15dp"
                    android:contentDescription="@string/reject_an_incoming_call"/>

            <TextView
                    android:id="@+id/call_state_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:padding="20dp"
                    android:textColor="@color/black"
                    android:text="@string/call_ended"
                    android:layout_marginBottom="40dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/background_white_button"
                    android:visibility="gone"/>

            <View android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>